--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
     <div class="hero-content">
       <h1 class="typewriter">Welcome to RoboxAlKhwarazmi</h1>
       <p>Innovating the future with robotics, AI, and engineering creativity. Join us to build tomorrow!</p>
-      <button class="btn_entry"><a href="https://t.me/RoboXAl_Khwarizmi">Join Now</a></button>
+      <button class="btn_entry"><a href="https://t.me/roboX_uzb">Join Now</a></button>
     </div>
   </section>
 
@@ -170,7 +170,7 @@
         <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Your Email" required />
         <textarea rows="5" placeholder="Your Message"></textarea>
-        <button type="submit"  class="share"><a href="https://t.me/RoboXAl_Khwarizmi"> Send Message</a></button>
+        <button type="submit"  class="share"><a href="https://t.me/roboX_uzb"> Send Message</a></button>
       </form>
     </div>
   </section>
@@ -179,7 +179,7 @@
     <div class="join-container">
       <h2>🚀 Join the RoboX Al-Khwarazmi Community</h2>
       <p>Be part of our innovation journey! Collaborate, share ideas, and grow with future leaders in robotics & AI.</p>
-      <a href="https://t.me/RoboXAl_Khwarizmi" target="_blank" class="join-btn">
+      <a href="https://t.me/roboX_uzb" target="_blank" class="join-btn">
         Join Now
       </a>
     </div>
@@ -195,3 +195,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
